# cocoa-tokenizer

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
config/: main.yaml
docs/: index.md
docs/api/: cli.md  collator.md  tokenizer.md  winnower.md
docs/recipes/: configure-new-token.md  date-based-generative-inference.md  tokenizer-transfer.md
docs/stylesheets/: extra.css
recipes/: configure-new-token.md  date-based-generative-inference.md  tokenizer-transfer.md
src/cocoa/: cli.py  collator.py  configurable.py  logger.py  tokenizer.py  util.py  winnower.py
src/cocoa/config/: collation.yaml  tokenization.yaml  winnowing.yaml
