[project]
    authors = [
        { name = "Michael C. Burkhart", email = "burkh4rt@uchicago.edu" },
        { name = "Luke Solo", email = "lsolo@uchicago.edu" },
        { name = "Inhyeok Lee", email = "ihlee@uchicago.edu" },
        { name = "S'Khaja Charles", email = "skhaja@uchicago.edu" },
        { name = "Brett K. Beaulieu-Jones", email = "beaulieujones@uchicago.edu" },
    ]
    classifiers = [
        "Development Status :: 2 - Pre-Alpha",
        "Intended Audience :: Science/Research",
        "Natural Language :: English",
        "Programming Language :: Python :: 3",
    ]
    dependencies = [ "numpy", "omegaconf", "polars", "rich", "typer" ]
    description = "configurable collator and tokenizer"
    keywords = [ "data collation", "generative event models", "tokenization" ]
    license = "MIT"
    license-files = [ "LICEN[CS]E.*" ]
    name = "cocoa"
    readme = { file = "README.md", content-type = "text/markdown" }
    requires-python = ">=3.11"
    version = "26.4.0"

    [project.scripts]
        cocoa = "cocoa.cli:main"

    [project.urls]
        Repository = "https://github.com/bbj-lab/cocoa"

    [project.optional-dependencies]
        dev = [ "pip", "ruff" ]

[build-system]
    build-backend = "setuptools.build_meta"
    requires      = [ "setuptools" ]

[tool.ruff]
    extend-exclude = [ "*.md" ]
    line-length    = 88

    [tool.ruff.format]
        docstring-code-format     = true
        indent-style              = "space"
        line-ending               = "lf"
        quote-style               = "double"
        skip-magic-trailing-comma = true

    [tool.ruff.lint]
        ignore = [ "E731" ]
        select = [ "E", "F", "I" ]

        [tool.ruff.lint.isort]
            known-first-party       = [ "cocoa", "cotorra", "coreopsis" ]
            split-on-trailing-comma = false

[tool.setuptools]
    include-package-data = true

    [tool.setuptools.packages.find]
        where = [ "src" ]

    [tool.setuptools.package-data]
        "config" = [ "*.yaml" ]
