[project]
    authors = [
        { name = "Michael C. Burkhart <burkh4rt@uchicago.edu>, Luke Solo <lsolo@uchicago.edu>, Inhyeok Lee <ihlee@uchicago.edu>, S'Khaja Charles <skhaja@uchicago.edu>, & Brett K. Beaulieu-Jones <beaulieujones@uchicago.edu>" },
    ]
    classifiers = [
        "Development Status :: 2 - Pre-Alpha",
        "Intended Audience :: Science/Research",
        "Natural Language :: English",
        "Programming Language :: Python :: 3",
    ]
    dependencies = [
        "deepdiff",
        "numpy",
        "omegaconf",
        "polars",
        "rich",
        "typer",
    ]
    description = "configurable collator and tokenizer"
    keywords = [ "data collation", "generative event models", "tokenization" ]
    license = "MIT"
    license-files = [ "LICEN[CS]E.*" ]
    name = "cocoa-tokenizer"
    readme = { file = "README.md", content-type = "text/markdown" }
    requires-python = ">=3.11"
    version = "26.6.2"

    [project.scripts]
        cocoa = "cocoa.cli:main"

    [project.urls]
        Documentation = "https://cocoa-tokenizer.readthedocs.io"
        Issues        = "https://github.com/bbj-lab/cocoa/issues"
        Repository    = "https://github.com/bbj-lab/cocoa"

    [project.optional-dependencies]
        all = [ "cocoa-tokenizer[dev,docs]" ]
        dev = [ "pip", "ruff" ]
        docs = [
            "mkdocs",
            "mkdocs-material",
            "mkdocstrings[python]",
            "mkdocs-include-markdown-plugin",
            "mkdocs-callouts",
            "mkdocs-git-revision-date-localized-plugin",
        ]

[build-system]
    build-backend = "setuptools.build_meta"
    requires      = [ "setuptools" ]

[tool.ruff]
    extend-exclude = [ "*.md" ]
    line-length    = 88

    [tool.ruff.format]
        docstring-code-format     = true
        indent-style              = "space"
        line-ending               = "lf"
        quote-style               = "double"
        skip-magic-trailing-comma = true

    [tool.ruff.lint]
        ignore = [ "E731" ]
        select = [ "E", "F", "I" ]

        [tool.ruff.lint.isort]
            known-first-party       = [ "cocoa", "cotorra", "coreopsis" ]
            split-on-trailing-comma = false

[tool.setuptools]
    include-package-data = true

    [tool.setuptools.packages.find]
        where = [ "src" ]

    [tool.setuptools.package-data]
        "cocoa.config" = [ "*.yaml" ]
